fixed file names

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button id="controlButton" type="button">Start</button>
   </form>
 
-  <script src="script.js"></script>
+  <script src="tictactoe.js"></script>
 </body>
 </html>
